@@ -8,7 +8,7 @@
 		<PROPERTY NAME="commentEnd" VALUE="*/" />
 		<PROPERTY NAME="wordBreakChars" VALUE=",+-=&lt;&gt;/?^&amp;*" />
 	</PROPS>
-	<RULES ESCAPE="\" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
+	<RULES ESCAPE="\" IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
 		<!-- enhancement if using some preprocessor -->
 		<SPAN TYPE="COMMENT1">
 			<BEGIN>/*</BEGIN>
@@ -33,8 +33,8 @@
 		<SEQ TYPE="OPERATOR">&lt;</SEQ>
 		<SEQ TYPE="OPERATOR">&lt;&gt;</SEQ>
 		<SEQ TYPE="OPERATOR">^</SEQ>
-		<SEQ TYPE="OPERATOR"> AND </SEQ>
-		<SEQ TYPE="OPERATOR"> OR </SEQ>
+		<SEQ TYPE="OPERATOR"> and </SEQ>
+		<SEQ TYPE="OPERATOR"> or </SEQ>
 
 		<MARK_PREVIOUS TYPE="LABEL" EXCLUDE_MATCH="TRUE" AT_LINE_START="TRUE">:</MARK_PREVIOUS>
 		<MARK_PREVIOUS TYPE="FUNCTION" EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
@@ -79,12 +79,9 @@
 			<KEYWORD1>FATTR</KEYWORD1>
 			<KEYWORD1>FBIN</KEYWORD1>
 			<KEYWORD1>FDEC</KEYWORD1>
-			<KEYWORD1>FID</KEYWORD1>
 			<KEYWORD1>FIELD</KEYWORD1>
-			<KEYWORD1>FILE</KEYWORD1>
 			<KEYWORD1>FILEOPT</KEYWORD1>
 			<KEYWORD1>FILL</KEYWORD1>
-			<KEYWORD1>FIN</KEYWORD1>
 			<KEYWORD1>FLOATINGPOINT</KEYWORD1>
 			<KEYWORD1>FPT</KEYWORD1>
 			<KEYWORD1>GAP</KEYWORD1>
@@ -159,6 +156,9 @@
 			<KEYWORD2>ENDTRACE</KEYWORD2>
 			<KEYWORD2>ERASE</KEYWORD2>
 			<KEYWORD2>EXTRACT</KEYWORD2>
+			<KEYWORD2>FID</KEYWORD2>
+			<KEYWORD2>FILE</KEYWORD2>
+			<KEYWORD2>FIN</KEYWORD2>
 			<KEYWORD2>FIND</KEYWORD2>
 			<KEYWORD2>FROM</KEYWORD2>
 			<KEYWORD2>IND</KEYWORD2>
@@ -224,10 +224,12 @@
 			<KEYWORD2>UNLOCK</KEYWORD2>
 			<KEYWORD2>WHERE</KEYWORD2>
 			<KEYWORD2>WRITE</KEYWORD2>
+			<KEYWORD2>XFID</KEYWORD2>
+			<KEYWORD2>XFILE</KEYWORD2>
+			<KEYWORD2>XFIN</KEYWORD2>
 
 			<KEYWORD3>ADDR</KEYWORD3>
 			<KEYWORD3>ALL</KEYWORD3>
-			<KEYWORD3>AND</KEYWORD3>
 			<KEYWORD3>AUTO</KEYWORD3>
 			<KEYWORD3>BEGIN</KEYWORD3>
 			<KEYWORD3>BREAK</KEYWORD3>
@@ -261,6 +263,7 @@
 			<KEYWORD3>GOSUB</KEYWORD3>
 			<KEYWORD3>GOTO</KEYWORD3>
 			<KEYWORD3>IF</KEYWORD3>
+			<KEYWORD3>IFF</KEYWORD3>
 			<KEYWORD3>INITFILE</KEYWORD3>
 			<KEYWORD3>IOR</KEYWORD3>
 			<KEYWORD3>LET</KEYWORD3>
