@@ -902,6 +902,7 @@ about.text=jEdit is brought to you by\n\
 	Jason Ginchereau\n\
 	Jerry McBride\n\
 	Jiger Patel\n\
+	Jim Lawton\n\
 	Jim Wissner\n\
 	John Gellene\n\
 	John Perry\n\
